# typedframes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPING.md  README.md  pyproject.toml  tasks.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
benchmarks/: __init__.py  benchmark_checkers.py
docs/: index.md  usage.md
docs/api/: cli.md
examples/: linter_test_example.py  pandera_example.py  schema_algebra_example.py  typeddict_example.py  typedframes_example.py
examples/dataenforce/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  pyproject.toml
examples/dataframely/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  mypy.ini  mypy_typedframes.ini  pyproject.toml
examples/great_expectations/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  pyproject.toml
examples/multi_file_inference/: pipeline.py  transforms.py
examples/multi_file_with_schema/: pipeline.py  reports.py  schemas.py
examples/narwhals/: MYPY_OUTPUTS.txt  README.md  SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  pyproject.toml
examples/pandas_stubs_example/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  mypy.ini  pyproject.toml
examples/pandas_type_checks/: MYPY_OUTPUTS.txt  SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  mypy_typedframes.ini  pyproject.toml
examples/pandera/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  main.py  pyproject.toml
examples/patito/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  main.py  mypy_strict.ini  mypy_typedframes.ini  pyproject.toml
examples/static_frame/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  d_checker_demo.py  main.py  mypy.ini  pyproject.toml  test_plugin.py
examples/strictly_typed_pandas/: SPEC.md  a_working_example.py  b_static_analysis.py  c_typedframes_comparison.py  d_debug_typedframes.py  mypy_stp_nopl.ini  pyproject.toml
pandas_column_linter/: __init__.py  mypy.py
rust/: Cargo.toml
rust/src/: lib.rs
rust_pandas_linter/: Cargo.toml
rust_pandas_linter/src/: lib.rs  main.rs
rust_pandas_linter/tests/: integration_test.rs
rust_typedframes_linter/: Cargo.toml
rust_typedframes_linter/src/: lib.rs
rust_typedframes_linter/tests/: integration_test.rs
src/typedframes/: __init__.py  base_schema.py  cli.py  column.py  column_alias_not_yet_defined_error.py  column_group.py  column_group_error.py  column_set.py  column_set_members_not_yet_defined_error.py  defined_later.py  missing_dependency_error.py  mypy.py  pandas.py  pandas_frame.py  polars.py  polars_frame.py  schema_algebra.py
tests/: AGENTS.md  __init__.py  test_base_schema.py  test_column.py  test_column_set.py  test_integration.py  test_pandas_frame.py  test_plugin_unit.py  test_polars_frame.py  test_regression.py
tests/fixtures/: __init__.py  issue_scenarios.py  missing_column.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_base_schema.py  test_cli.py  test_column.py  test_column_group.py  test_column_group_error.py  test_column_set.py  test_combine_schemas.py  test_drop.py  test_missing_dependency_error.py  test_mypy_plugin.py  test_mypy_utils.py  test_pandas_frame.py  test_polars_frame.py  test_schema_add_operator.py  test_select.py
typedframes-checker/rust_typedframes_checker/: Cargo.toml
typedframes-checker/rust_typedframes_checker/src/: lib.rs
typedframes-lint/: pyproject.toml
typedframes-lint/rust_typedframes_linter/: README.md
typedframes-lint/rust_typedframes_linter/src/: lib.rs  main.rs
typedframes-lint/rust_typedframes_linter/tests/: integration_test.rs
typedframes-lint/src/typedframes_lint/: __init__.py  mypy.py
