[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "typedframes"
version = "0.1.0"
description = "Static analysis for pandas and polars DataFrames. Catch column errors at lint-time, not runtime."
readme = "README.md"
authors = [
    { name = "William Martin" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mypy",
    "pandas>=3.0.0",
    "polars>=1.37.1",
]

[project.scripts]
example-pkg = "typedframes:check"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "rust_typedframes_linter/Cargo.toml"
python-source = "src"
module-name = "typedframes._rust_linter"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-branch"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "examples/*",
    "tests/*",
    "tasks.py",
]

[tool.mypy]
mypy_path = "src"
plugins = ["typedframes.mypy"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.format]
# Ensure the formatter respects the limit
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # Conflicts with D211
    "D212",   # Conflicts with D213
    "COM812", # Conflicts with ruff formatter
    "PT009",  # Using unittest.TestCase
    "PT027",  # Using unittest.TestCase
    "PLC0415",  # Lazy imports for optional dependencies (polars/pandas)
    "ANN401",  # Any needed for pandas compatibility and Python protocols
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SLF001", "S603", "S607"]
"tests/fixtures/*" = ["T201"]
"examples/*" = ["T201", "INP001"]
"src/typedframes/mypy.py" = ["S603"]
"benchmarks/*" = ["T201", "S603", "S607", "PLR2004", "PLR0912", "PLR0913", "TRY300"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "bandit>=1.7.0",
    "complexipy>=0.7.0",
    "invoke>=2.2.0",
    "licensecheck>=2024.0.0",
    "maturin>=1.11.5",
    "pre-commit>=3.7.0",
    "pyrefly>=0.51.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.terminal]
output-format = "concise"

[[tool.ty.overrides]]
include = ["examples/*.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"
