[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typedframes"
version = "0.1.0"
description = "Static analysis for pandas and polars DataFrames. Catch column errors at lint-time, not runtime."
readme = "README.md"
authors = [
    { name = "William Martin" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=3.0.0"]
polars = ["polars>=1.37.1"]

[tool.uv.workspace]
members = ["typedframes-lint"]

[tool.uv.sources]
typedframes-lint = { workspace = true }

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=json --cov-branch -n auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/*",
    "examples/*",
    "tests/*",
    "tasks.py",
]

[tool.mypy]
mypy_path = "src"
plugins = ["typedframes_lint.mypy"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.format]
# Ensure the formatter respects the limit
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # Conflicts with D211
    "D212",   # Conflicts with D213
    "COM812", # Conflicts with ruff formatter
    "PT009",  # Using unittest.TestCase
    "PT027",  # Using unittest.TestCase
    "PLC0415",  # Lazy imports for optional dependencies (polars/pandas)
    "ANN401",  # Any needed for pandas compatibility and Python protocols
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SLF001", "S603", "S607"]
"tests/fixtures/*" = ["T201"]
"examples/*" = ["T201", "INP001"]
"tasks.py" = ["T201"]
"typedframes-lint/src/typedframes_lint/mypy.py" = ["S603"]
"benchmarks/*" = ["T201", "S603", "S607", "PLR2004", "PLR0912", "PLR0913", "TRY300"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "typedframes-lint",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "bandit>=1.7.0",
    "complexipy>=0.7.0",
    "coverage-threshold>=0.6.2",
    "invoke>=2.2.0",
    "licensecheck>=2024.0.0",
    "maturin>=1.11.5",
    "pre-commit>=3.7.0",
    "pyrefly>=0.51.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.13",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage-threshold]
line_coverage_min = 100
branch_coverage_min = 100
file_line_coverage_min = 100
file_branch_coverage_min = 100

[tool.ty.terminal]
output-format = "concise"

[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unused-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["examples/*.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"
invalid-type-form = "ignore"

[[tool.ty.overrides]]
include = ["benchmarks/**/*.py"]

[tool.ty.overrides.rules]
no-matching-overload = "ignore"

[tool.licensecheck]
using = "PEP631"
groups = ["dev"]
ignore_packages = ["mypy-extensions", "typedframes", "typedframes-lint", "pyrefly"]
