[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "typedframes"
version = "0.2.1"
description = "Static analysis for pandas and polars DataFrames. Catch column errors at lint-time, not runtime."
keywords = ["pandas", "polars", "type-checking", "static-analysis", "dataframe", "linter", "mypy-plugin"]
readme = "README.md"
authors = [
    { name = "William Martin" }
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/w-martin/typedframes"
Documentation = "https://typedframes.readthedocs.io/en/latest/"
Repository = "https://github.com/w-martin/typedframes"
"Issue Tracker" = "https://github.com/w-martin/typedframes/issues"

[project.scripts]
typedframes = "typedframes.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=2.3.3"]
pandera = ["pandera>=0.29.0"]
polars = ["polars>=1.38.1"]
mypy = ["mypy"]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "typedframes._rust_checker"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=json --cov-report=lcov --cov-branch -n auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/*",
    "examples/*",
    "tests/*",
    "tasks.py",
]

[tool.mypy]
mypy_path = "src"
plugins = ["typedframes.mypy"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.format]
# Ensure the formatter respects the limit
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # Conflicts with D211
    "D212",   # Conflicts with D213
    "COM812", # Conflicts with ruff formatter
    "PT009",  # Using unittest.TestCase
    "PT027",  # Using unittest.TestCase
    "PLC0415",  # Lazy imports for optional dependencies (polars/pandas)
    "ANN401",  # Any needed for pandas compatibility and Python protocols
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SLF001", "S603", "S607"]
"tests/fixtures/*" = ["T201"]
"examples/*" = ["T201", "INP001", "D100", "D101", "D103"]
"tasks.py" = ["T201"]
"src/typedframes/cli.py" = ["T201"]
"benchmarks/*" = ["T201", "S603", "S607", "PLR2004", "PLR0912", "PLR0913", "TRY300"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings-python>=1.10",
]
dev = [
    "pandas>=3.0.1",
    "pandera>=0.29.0",
    "polars>=1.38.1",
    "bandit>=1.9.3",
    "complexipy>=5.2.0",
    "coverage-threshold>=0.6.2",
    "invoke>=2.2.1",
    "licensecheck>=2025.1.0",
    "maturin>=1.11.5",
    "pre-commit>=4.5.1",
    "pyrefly>=0.54.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
    "ty>=0.0.19",
    "openpyxl>=3.1.5",
    "pyarrow>=23.0.0",
    "xlsxwriter>=3.2.9",
    "fastexcel>=0.19.0",
    "pandas-stubs>=3.0.0.260204",
    "mypy>=1.19.1",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage-threshold]
line_coverage_min = 100
branch_coverage_min = 100
file_line_coverage_min = 100
file_branch_coverage_min = 100

[tool.ty.terminal]
output-format = "concise"

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["src/typedframes/pandera.py"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["examples/*.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"
invalid-type-form = "ignore"
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = ["benchmarks/**/*.py"]

[tool.ty.overrides.rules]
no-matching-overload = "ignore"

[tool.typedframes]
enabled = true
warnings = true

[tool.licensecheck]
using = "PEP631"
groups = ["dev"]
ignore_packages = ["mypy-extensions", "typedframes", "pyrefly"]
