[package]
name = "pandas_column_linter"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust-based linter for pandas DataFrame column schemas"
license = "MIT"
repository = "https://github.com/w-martin/pandas_type_checking"
homepage = "https://github.com/w-martin/pandas_type_checking"
documentation = "https://github.com/w-martin/pandas_type_checking"

[lib]
name = "rust_pandas_linter"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust_pandas_linter"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
rustpython-parser = "0.4.0"
rustpython-ast = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }

[dev-dependencies]
tempfile = "3.8"
