[package]
name = "typedframes_linter"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust-based linter for typedframes DataFrame column schemas"
license = "MIT"
repository = "https://github.com/w-martin/typedframes"
homepage = "https://github.com/w-martin/typedframes"
documentation = "https://github.com/w-martin/typedframes"

[lib]
name = "_rust_linter"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "typedframes_linter"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
rustpython-parser = "0.4.0"
rustpython-ast = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }

[dev-dependencies]
tempfile = "3.8"
