[package]
name = "typedframes_checker"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust-based checker for typedframes DataFrame column schemas"
license = "MIT"
repository = "https://github.com/w-martin/typedframes"
homepage = "https://github.com/w-martin/typedframes"
documentation = "https://github.com/w-martin/typedframes"

[lib]
name = "_rust_checker"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "typedframes_checker"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "warn"

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.0" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false
